# debrief

./: .env.example  .gitignore  DECISIONS.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: b7e2f4a1c3d5_cost_usd_nullable.py  c1a5e6b2f9d7_extend_pagination_index.py  d2b8f1a4c6e9_add_is_demo_to_projects.py  f3a1c9d2e8b4_initial_schema.py
backend/app/: anthropic_client.py  config.py  db.py  demo_mode.py  deps.py  logging_config.py  main.py  metrics.py  middleware.py  models.py  pagination.py  queue.py  rate_limit.py  request_context.py  schemas.py  security.py
backend/app/evals/: calibration.py  compare_stats.py  judge.py  rules.py
backend/app/routers/: calls.py  compare.py  evals.py  ingest.py  stats.py
backend/app/services/: calls.py  compare.py  pricing.py  stats.py
backend/app/workers/: tasks.py  worker.py
backend/scripts/: seed.py
backend/tests/: conftest.py  test_calibration.py  test_calibration_endpoint.py  test_calls.py  test_compare_endpoint.py  test_compare_stats.py  test_cors.py  test_demo_mode.py  test_eval_rules.py  test_evals_crud.py  test_healthz.py  test_ingest.py  test_judge.py  test_logging_config.py  test_metrics.py  test_middleware.py  test_rate_limit.py  test_stats.py  test_worker.py
docs/: show-hn.md
frontend/: Dockerfile  next.config.mjs  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ApiKeyBar.tsx  CallsTable.tsx  SpendChart.tsx
(+5 files in other folders)
